fixed grid layout issue in skills section, added root color variables

--- a/style.css
+++ b/style.css
@@ -1,23 +1,38 @@
 @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
 
+:root {
+  --clr-primary-bg: #245b80;
+  --clr-secondary-bg: #fff;
+
+  --fc-primary: #fff;
+  --fc-secondary: #5a5a5a;
+  --fc-third: #000;
+
+
+  --ff-primary: "Muli", sans-serif;  
+}
+
 * {
   box-sizing: border-box;
 }
 
 html,
 body {
-  font-family: "Muli", sans-serif;
+  font-family: var(--ff-primary);
+  color: var(--fc-primary);
   overflow-x: hidden;
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: #245b80;
+  background-color: var(--clr-primary-bg);
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2rem;
+  text-align: center;
+  padding: 0 0 1.75rem;
+  text-shadow: 1px 1px 2px #000;
 }  
-
 
 .navbar {
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 5px,
@@ -64,16 +79,14 @@ h1 {
 }
 
 .home h1 {
-  padding-bottom: 1.25rem;
-  color: #fff;  
+  padding-bottom: 1.25rem;   
   text-shadow: 1px 1px 2px black;
   -webkit-animation: puff-in-center 0.5s cubic-bezier(0.47, 0, 0.745, 0.715)
     2.5s both;
   animation: puff-in-center 0.5s cubic-bezier(0.47, 0, 0.745, 0.715) 0.5s both;
 }
 
-.home p {
-  color: #fff;
+.home p {  
   font-size: 1.1rem;
   margin-bottom: .5rem;
   -webkit-animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s
@@ -140,8 +153,7 @@ h1 {
 
 .dev-tools {
   position: absolute;
-  bottom: 2rem;
-  color: white;
+  bottom: 2rem;  
   font-size: 1.25rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;  
@@ -204,23 +216,17 @@ h1 {
   padding: 4rem .75rem;  
   margin: 0;  
   font-size: 1.1rem;  
-  display: flex;
-  color: #fff;
+  display: flex;  
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #245b80;
-}
-
-.about-me h1 {
-  text-align: center;  
-  text-shadow: 1px 1px 2px black;  
+  background-color: var(--clr-primary-bg);
 }
 
 .about-me img {
   width: 160px;
   border-radius: 50%;
-  padding: .5rem 0;
+  padding: 1rem 0;
 }
 
 .about-me p {
@@ -231,37 +237,35 @@ h1 {
 }
 
 .section-skills {
-  background-color: #fff;
-  color: #fff;
+  background-color: var(--clr-secondary-bg);  
   text-align: center;
   padding: 4rem .75rem;
 }
 
 .section-skills h1 {
-  color: #808080;
+  color: var(--fc-secondary);
   text-align: center;
   padding: 0 0 2rem;
   text-shadow: 1px 1px 2px black;
 }
 
-.skills-container {
-  padding: 0 .75rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 320px);
+.skills-container {  
+  display: grid;  
   justify-content: center;
+  row-gap: 1rem;
 }
 
 .skills-container a {
-  color: #fff;
+  color: var(--fc-primary);
   text-decoration: underline;
 }
 
 .core-skill { 
-  background-color: #808080;
-  width: auto;
-  text-align: center;
-  padding: 1rem;
-  margin: 1rem 1rem;
+  background-color: var(--fc-secondary);
+  width: 100%;
+  padding: 1rem; 
+  margin: 0; 
+  text-align: center;  
   -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px,
     inset rgba(0, 0, 0, 0.15) 0px -5px 5px;
   -moz-box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 5px,
@@ -289,17 +293,17 @@ h1 {
 }
 
 .core-skill hr {
-  margin: 0px 10%;
+  margin: 0 10% .5rem;
+  border: 1px solid var(--fc-primary);
 }
 
 .education-training {
   padding: 4rem .75rem;  
   margin: 0;  
-  display: flex;
-  color: #fff;
+  display: flex;  
   flex-direction: column;
   align-items: center;
-  background-color: #245b80;
+  background-color: var(--clr-primary-bg);
 }
 
 .edu-training-container {
@@ -330,13 +334,6 @@ h1 {
   
 }
 
-.projects h1 {
-  color: #fff;
-  text-align: center;
-  padding: 0 0 2rem;
-  text-shadow: 1px 1px 2px black;
-}
-
 .projects-container {
   display: flex;
   justify-content: center;
@@ -354,8 +351,7 @@ h1 {
   display: block;
   border-radius: 15px;
   width: 100%;
-  height: auto;
-  
+  height: auto;  
 }
 
 .project-desc-container {
@@ -378,7 +374,8 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #fff;
+  background-color: var(--clr-secondary-bg);
+  color: var(--fc-third);
   padding: 1rem;
   border-radius: 15px;
   width: auto;
@@ -417,17 +414,9 @@ h1 {
 }
 
 .codepens {
-  background-color: #245b80;
-  color: #fff;
+  background-color: var(--clr-primary-bg);  
   text-align: center;
   padding: 4rem 0 6rem;
-}
-
-.codepens h1 {
-  color: #fff;
-  text-align: center;
-  padding: 0 0 3rem;
-  text-shadow: 1px 1px 2px #000;
 }
 
 .carousel-item img {
@@ -438,8 +427,7 @@ h1 {
 }
 
 footer {
-  background-color: #fff;
-  
+  background-color: var(--clr-secondary-bg);  
 }
 
 .fa-angle-up {
@@ -471,13 +459,19 @@ footer {
 }
 
 .copyright {
+  color: var(--fc-third);
   margin: 0;
   padding: 1rem 0;
 }
 
-@media (min-width: 620px) {
+@media (min-width: 690px) {
+  h1 {
+    margin: 0;
+    padding-bottom: 1rem;
+  }
+  
   .home h1 {
-    font-size: 3.25rem;
+    font-size: 3.25rem;    
   }
 
   .home p {
@@ -489,8 +483,13 @@ footer {
   }
 
   .about-me img {
-    padding: 2rem 0;
+    padding: 1rem 0 1rem 0;
   }
+
+  .skills-container {
+    grid-template-columns: 320px 320px;
+    column-gap: 1rem;
+  }  
 
   .education h3,
   .training h3 {
